# cubesolve

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
ai_teaching/: AiTeachingLBL.cpp  AiTeachingLBL.h
cs/: AxisCube.cpp  AxisCube.h  AxisCubieCube.cpp  AxisCubieCube.h  CMakeCache.txt  CMakeLists.txt  CoordCube.cpp  CoordCube.h  CoordCube5.cpp  CoordCube5.h  CoordCubeRaw.cpp  CoordCubeRaw.h  CubieCube.cpp  CubieCube.h  CubieTables.cpp  CubieTables.h  FaceCubeBase.cpp  FaceCubeBase.h  HumanSolver.cpp  HumanSolver.h  Search.cpp  Search.h  Search5 - 副本.cpp  Search5.cpp  Search5.h  cs.cpp  cs.h  tools.cpp  tools.h  util.cpp  util.h
cs/android/: CMakeLists.txt  build.bat
cs/ios/: CMakeLists.txt  build.sh
cs/windows/: CMakeLists.txt
cube_cv/: CMakeLists.txt  CenterColorRecognize.cpp  CenterColorRecognize.h  FaceColorDetect.cpp  FaceColorDetect.h  FaceRectDetect.cpp  FaceRectDetect.h  cube_cv.h  cube_cv_utils.cpp  cube_cv_utils.h
es_utils/: CMakeLists.txt
es_utils/Include/: esUtil.h
es_utils/Source/: esUtil.c
es_utils/src_win32/: esUtil_win32.c
ktx/src/: checkheader.c  etcunpack.cxx  ktxint.h
my_model/: CMakeLists.txt  MyAATools.cpp  MyAATools.h  MyCubeControl.cpp  MyCubeControl.h  my.h  myAnimation.cpp  myAnimation.h  myAnimationArrow.cpp  myAnimationArrow.h  myAnimationCoord.cpp  myAnimationCoord.h  myAnimationCube.cpp  myAnimationCube.h  myCamera.cpp  myCamera.h  myCubeAng.cpp  myCubeAng.h  myCubeControlNew.cpp  myCubeControlNew.h  myCubeModel.cpp  myCubeModel.h  myCubeScene.cpp  myCubeScene.h  myCubeSceneHandler.cpp  myCubeSceneHandler.h  myMatrix.cpp  myMatrix.h  myModel.cpp  myModel.h  myQuaternion.cpp  myQuaternion.h  myRenderer.cpp  myRenderer.h  myScene.cpp  myScene.h  mySectionAnalysis.cpp  mySectionAnalysis.h  myShader.cpp  myShader.h  (+5 more)
my_model/glsl/: fragmentShader_es11.glsl  vertexShader_es11.glsl
python_wrapper/: CMakeLists.txt  myAA.i  run_cmake.bat  run_swig.bat
resoures/: background.ktx  ground.ktx
resoures/cube_stickerless.bundle/: logo.ktx
snappy/: CMakeLists.txt
tools/: CMakeLists.txt  CfopAnalysis.cpp  CfopAnalysis.h  CubeFrames.cpp  CubeFrames.h  FramesStat.cpp  FramesStat.h  RandomCubeToDoFormula.cpp  RandomCubeToDoFormula.h  good_tools.cpp  good_tools.h  tools.h  tools_typedef.h
